--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,31 +1,30 @@
 ---
-import { Image } from "astro:assets";
-import MainLayout from "./MainLayout.astro";
-import Footer from "@/components/Footer.astro";
-import { navLinks } from "@/data";
-import Navbar from "@/components/Navbar";
+import { Image } from 'astro:assets';
+import MainLayout from './MainLayout.astro';
+import Footer from '@/components/Footer.astro';
+import { navLinks } from '@/data';
+import Navbar from '@/components/Navbar';
+import '../styles/blog.css';
 const { frontmatter } = Astro.props;
-import "../styles/blog.css";
 ---
 
 <MainLayout title={frontmatter.title} description={frontmatter.description}>
   <Navbar navLinks={navLinks} client:load />
-  <main class="p-5 md:p-10 blog">
+  <main class="p-5 md:p-10 w-full md:w-2/3 lg:w-1/2 mx-auto blog">
     <h1 class="text-[3rem] md:text-[5rem] font-bold">{frontmatter.title}</h1>
     <p class="mb-3 text-sm ml-2">
       Published on {frontmatter.pubDate} by {frontmatter.author}
     </p>
-    {
-      frontmatter.heroImage ? (
-        <Image
-          src={frontmatter.heroImage}
-          alt={frontmatter.title}
-          height={400}
-          width={760}
-          class="rounded-lg my-5"
-        />
-      ) : null
-    }
+
+    <a href={frontmatter.href} target="_blank">
+      <Image
+        src={frontmatter.heroImage}
+        alt={frontmatter.title}
+        height={400}
+        width={760}
+        class="rounded-lg my-5"
+      />
+    </a>
     <slot />
   </main>
   <Footer navLinks={navLinks} />
