--- a/src/components/SelectedProjectBox.astro
+++ b/src/components/SelectedProjectBox.astro
@@ -1,9 +1,14 @@
 ---
 import SelectedProjectItem from './SelectedProjectItem.astro';
+import type { SelectedProject } from '@/data';
 
-const { projects = {} } = Astro.props;
+interface Props {
+  projects: SelectedProject[];
+}
+
+const { projects = [] } = Astro.props;
 ---
 
-<div class='flex flex-col p-1'>
+<div class="flex flex-col p-1">
   {projects.map((project) => <SelectedProjectItem project={project} />)}
 </div>
