--- a/src/components/SkillItem.astro
+++ b/src/components/SkillItem.astro
@@ -1,9 +1,14 @@
 ---
+import type { Skill } from '@/data';
+interface Props {
+  skill: Skill;
+}
+
 const { skill } = Astro.props;
 ---
 
 <div
-  class='rounded-full p-2 md:p-3 bg-slate-100 mx-2 min-w-[60px] flex items-center justify-center'
+  class="rounded-full p-2 md:p-3 bg-slate-100 mx-2 min-w-[60px] flex items-center justify-center"
 >
-  <span class='font-semibold'>{skill}</span>
+  <span class="font-semibold">{skill}</span>
 </div>
