--- a/src/components/WorkExperienceBox.astro
+++ b/src/components/WorkExperienceBox.astro
@@ -1,13 +1,14 @@
 ---
 import WorkExperienceItem from './WorkExperienceItem.astro';
+import type { WorkExperience } from '@/data';
 
-const { workExperiences = {} } = Astro.props;
+interface Props {
+  workExperiences: WorkExperience[];
+}
+
+const { workExperiences = [] } = Astro.props;
 ---
 
-<div class='flex flex-col p-1'>
-  {
-    workExperiences.map((workExperience) => (
-      <WorkExperienceItem workExperience={workExperience} />
-    ))
-  }
+<div class="flex flex-col p-1">
+  {workExperiences.map((workExperience) => <WorkExperienceItem workExperience={workExperience} />)}
 </div>
