added twitter image meta tag

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -62,6 +62,7 @@ const image = '/opengraph.png';
     <meta property="twitter:url" content={currentPath} />
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
+    <meta name="twitter:image" content={image} />
 
     <meta property="og:locale" content="en_IN" />
     <link rel="sitemap" href="/sitemap-index.xml" />
