--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -58,11 +58,13 @@ const image = '/opengraph.png';
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content={logo} />
-    <meta property="twitter:url" content={currentPath} />
+    <meta name="twitter:site" content="@wriddhihazra" />
+    <meta name="twitter:creator" content="@wriddhihazra" />
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
-    <meta name="twitter:image" content={image} />
+    <meta name="twitter:image" content="https://wriddhi.com/opengraph.png" />
+    <meta property="twitter:domain" content={logo} />
+    <meta property="twitter:url" content={currentPath} />
 
     <meta property="og:locale" content="en_IN" />
     <link rel="sitemap" href="/sitemap-index.xml" />
