--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -35,7 +35,7 @@ const firstname = name.split(' ')[0];
         showDeveloperText && (
           <span>
             maintained by{' '}
-            <a class="text-blue-900" href={contactOptions.Github}>
+            <a class="text-blue-900" href={contactOptions.Github} target="_blank">
               {firstname}
             </a>
           </span>
